--- a/cart-service/src/main/resources/application.yaml
+++ b/cart-service/src/main/resources/application.yaml
@@ -4,7 +4,7 @@ server:
     context-path: /winter-market-carts
 integrations:
   product-service:
-    url: http://localhost:8189/winter/
+    url: http://localhost:8189/winter-market-core/
     connect-timeout: 5000
     read-timeout: 10000
     write-timeout: 5000
