--- a/gateway-service/src/main/resources/application.yaml
+++ b/gateway-service/src/main/resources/application.yaml
@@ -23,14 +23,22 @@ spring:
             - StripPrefix=1
             - PrefixPath=/winter-market-core
             - JwtAuthFilter
-#        - id: cart-service
-#          uri: http://localhost:8190
-#          predicates:
-#            - Path=/cart/**
-#          filters:
-#            - StripPrefix=1
-#            - PrefixPath=/winter-market-carts
-#            - JwtAuthFilter
+        - id: cart-service
+          uri: http://localhost:8190
+          predicates:
+            - Path=/cart/**
+          filters:
+            - StripPrefix=1
+            - PrefixPath=/winter-market-carts
+            - JwtAuthFilter
+        - id: auth-service
+          uri: http://localhost:8188
+          predicates:
+            - Path=/auth/**
+          filters:
+            - StripPrefix=1
+            - PrefixPath=/winter-market-auth
+            - JwtAuthFilter
 
 
 jwt:
