--- a/core-service/pom.xml
+++ b/core-service/pom.xml
@@ -7,7 +7,7 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.6.3</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath/>
     </parent>
 
     <groupId>ru.geekbrains.winter.market</groupId>
@@ -31,7 +31,11 @@
             <artifactId>spring-boot-starter-webflux</artifactId>
         </dependency>
 
-
+        <dependency>
+        <groupId>ru.geekbrains.winter.market</groupId>
+        <artifactId>api</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
+        </dependency>
 
         <dependency>
             <groupId>org.flywaydb</groupId>
@@ -52,12 +56,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>ru.geekbrains.winter.market</groupId>
-            <artifactId>api</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-
         </dependency>
     </dependencies>
 
