--- a/front-service/pom.xml
+++ b/front-service/pom.xml
@@ -9,7 +9,8 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.6.3</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath/>
+
     </parent>
 
     <groupId>ru.geekbrains.winter.market</groupId>
